--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/main-css/myStyle.css">
+    <link rel="stylesheet" href="main-css/main.css">
     <title>News Website</title>
 </head>
 <body>
     <header>
         <nav>
-            
+
         </nav>
     </header>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
