--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main-css/main.css">
     <title>News Website</title>
 </head>
 <body>
     <header>
         <nav>
-
+            <label class="logo"><p>LOGO</p></label>
+            <ul class="menu">
+                <li><a class="blog" href="#">Blog</a></li>
+                <li><a class="courses" href="#">Our Courses</a></li>
+                <li><a class="webinars" href="#">Free Webinars</a></li>
+                <li><a class="reviews" href="#">Reviews</a></li>
+                <li><a class="sign-up" href="#">Sign Up</a></li>
+                <li><a class="log-in" href="#">Log in</a></li>
+            </ul>
         </nav>
     </header>
     <script src="assets/js/index.js"></script>
