--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main-css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main-css/main.css" />
     <title>News Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <label class="logo"><p>LOGO</p></label>
-            <ul class="menu">
-                <li><a class="blog" href="#">Blog</a></li>
-                <li><a class="courses" href="#">Our Courses</a></li>
-                <li><a class="webinars" href="#">Free Webinars</a></li>
-                <li><a class="reviews" href="#">Reviews</a></li>
-                <li><a class="sign-up" href="#">Sign Up</a></li>
-                <li><a class="log-in" href="#">Log in</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <label class="logo"><p>LOGO</p></label>
+        <ul class="menu">
+          <li><a class="blog" href="#">Blog</a></li>
+          <li><a class="courses" href="#">Our Courses</a></li>
+          <li><a class="webinars" href="#">Free Webinars</a></li>
+          <li><a class="reviews" href="#">Reviews</a></li>
+        </ul>
+        <ul class="sign-log">
+          <li><a class="sign-up" href="#">Sign Up</a></li>
+          <li><a class="log-in" href="#">Log in</a></li>
+        </ul>
+      </nav>
+      <main>
+        <div class="card-1"></div>
+      </main>
     </header>
     <script src="assets/js/index.js"></script>
-</body>
+  </body>
 </html>
