added images to the folder

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main-css/main.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/news-icon-13636-Windows.ico"
+      type="image/x-icon"
+    />
     <title>News Website</title>
   </head>
   <body>
