--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="assets/images/news-icon-13636-Windows.ico"
       type="image/x-icon"
     />
+    <script
+      src="https://kit.fontawesome.com/9983c167b7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>News Website</title>
   </head>
   <body>
@@ -34,7 +38,27 @@
         </ul>
       </nav>
       <main>
-        <div class="card-1"></div>
+        <div class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check" style="color: #192140"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+            </div>
+          </div>
+          <hr />
+          <div>
+            <p>test</p>
+          </div>
+        </div>
       </main>
     </header>
     <script src="assets/js/index.js"></script>
