--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
       </nav>
       <main>
-        <div class="card-1">
+        <section class="card-1">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
@@ -50,15 +50,218 @@
               alt="Card Image"
             />
             <div class="card1-content">
-              <i class="fa-regular fa-circle-check" style="color: #192140"></i>
+              <i class="fa-regular fa-circle-check circle-check"></i>
               <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
             </div>
           </div>
-          <hr />
-          <div>
-            <p>test</p>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="card-1">
+          <div class="card">
+            <i
+              class="fa-regular fa-circle-xmark circle-x"
+              style="color: #9d9db5"
+            ></i>
+            <img
+              class="img-card1"
+              src="assets/images/Background 04.png"
+              alt="Card Image"
+            />
+            <div class="card1-content">
+              <i class="fa-regular fa-circle-check circle-check"></i>
+              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <hr />
+              <div>
+                <ul class="card-footer">
+                  <li class="date">January 3, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </header>
     <script src="assets/js/index.js"></script>
