--- a/index.html
+++ b/index.html
@@ -38,225 +38,226 @@
         </ul>
       </nav>
       <main>
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
+              class="img-card"
               src="assets/images/Background 04.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
               <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
+                  <li class="date">January 1, 2023</li>
                   <li><i class="fa-regular fa-heart"></i> 4.5k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 05.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>What is a Full Stack Developer?</h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">February 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 10.1k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 06.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>
+                What are the Soft Skills and How Do They Benefit Your Career?
+              </h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">March 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 15.3k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 07.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>
+                IT Jobs: In-Demand, Available to Everyone, Ripe With
+                Opportunity.
+              </h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">April 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 13k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 08.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>7 Learning Tips for Data Science Self-Study.</h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">May 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 20.9k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 09.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>
+                Hard Skills vs. Soft Skills: Do You Really Need Both? Why?
+              </h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">June 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 5k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 10.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>What is JavaScript?</h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">July 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 99k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 11.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>
+                Who is Business Analyst: Roles, Skills, Salaries, Job Prospects?
+              </h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">August 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 7.8k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
-
-        <section class="card-1">
+        <section class="card-container">
           <div class="card">
             <i
               class="fa-regular fa-circle-xmark circle-x"
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card1"
-              src="assets/images/Background 04.png"
+              class="img-card"
+              src="assets/images/Background 12.png"
               alt="Card Image"
             />
-            <div class="card1-content">
+            <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <h3>How Much Do Data Analysts Make? 2023 Salary Guide</h3>
               <hr />
               <div>
                 <ul class="card-footer">
-                  <li class="date">January 3, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li class="date">September 1, 2023</li>
+                  <li><i class="fa-regular fa-heart"></i> 4.6k</li>
                 </ul>
               </div>
             </div>
