added footer section

--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
           </div>
         </section>
       </main>
+      <footer></footer>
     </header>
     <script src="assets/js/index.js"></script>
   </body>
