added footer content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">January 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.5k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 4.5k</li>
                 </ul>
               </div>
             </div>
@@ -80,7 +80,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">February 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 10.1k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 10.1k</li>
                 </ul>
               </div>
             </div>
@@ -106,7 +106,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">March 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 15.3k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 15.3k</li>
                 </ul>
               </div>
             </div>
@@ -133,7 +133,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">April 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 13k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 13k</li>
                 </ul>
               </div>
             </div>
@@ -157,7 +157,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">May 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 20.9k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 20.9k</li>
                 </ul>
               </div>
             </div>
@@ -183,7 +183,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">June 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 5k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 5k</li>
                 </ul>
               </div>
             </div>
@@ -207,7 +207,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">July 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 99k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 99k</li>
                 </ul>
               </div>
             </div>
@@ -233,7 +233,7 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">August 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 7.8k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 7.8k</li>
                 </ul>
               </div>
             </div>
@@ -257,14 +257,57 @@
               <div>
                 <ul class="card-footer">
                   <li class="date">September 1, 2023</li>
-                  <li><i class="fa-regular fa-heart"></i> 4.6k</li>
+                  <li><i class="fa-regular fa-heart heart"></i> 4.6k</li>
                 </ul>
               </div>
             </div>
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="section-blog">
+          <div class="footer-blog">
+            <p>BLOG</p>
+            <ul>
+              <li>Data Analyst</li>
+              <li>Web Developer</li>
+              <li>Career</li>
+              <li>Sucess Stories</li>
+              <li>Resume</li>
+              <li>Hard Skils</li>
+              <li>Soft Skills</li>
+            </ul>
+          </div>
+          <div class="socmed-links">
+            <p>Follow Us</p>
+            <ul>
+              <li><i class="fa-brands fa-linkedin socmed"></i></li>
+              <li><i class="fa-brands fa-square-instagram socmed"></i></li>
+              <li><i class="fa-brands fa-facebook socmed"></i></li>
+              <li><i class="fa-brands fa-twitter socmed"></i></li>
+              <li><i class="fa-brands fa-whatsapp socmed"></i></li>
+              <li><i class="fa-brands fa-tiktok socmed"></i></li>
+              <li><i class="fa-solid fa-play socmed"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="section-courses" style="color: aliceblue">
+          <div class="footer-courses">
+            <p>OUR Courses</p>
+            <ul>
+              <li>Data Analystics</li>
+              <li>Web Development</li>
+            </ul>
+          </div>
+          <div class="footer-privacy">
+            <ul>
+              <li>Privacy Policy</li>
+              <li>.</li>
+              <li>Terms of Use</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </header>
     <script src="assets/js/index.js"></script>
   </body>
