fixed social media icons

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
           <div class="socmed-links">
             <p>Follow Us</p>
             <ul>
-              <li><i class="fa-brands fa-linkedin socmed"></i></li>
-              <li><i class="fa-brands fa-square-instagram socmed"></i></li>
+              <li><i class="fa-brands fa-linkedin-in socmed"></i></li>
+              <li><i class="fa-brands fa-instagram socmed"></i></li>
               <li><i class="fa-brands fa-facebook socmed"></i></li>
               <li><i class="fa-brands fa-twitter socmed"></i></li>
               <li><i class="fa-brands fa-whatsapp socmed"></i></li>
