changed card images

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 04.png"
+              class="img-card1"
+              src="assets/images/card1.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -69,8 +69,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 05.png"
+              class="img-card2"
+              src="assets/images/card2.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -93,8 +93,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 06.png"
+              class="img-card3"
+              src="assets/images/card3.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -119,8 +119,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 07.png"
+              class="img-card4"
+              src="assets/images/card4.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -146,8 +146,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 08.png"
+              class="img-card5"
+              src="assets/images/card5.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -170,8 +170,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 09.png"
+              class="img-card6"
+              src="assets/images/card6.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -196,8 +196,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 10.png"
+              class="img-card7"
+              src="assets/images/card7.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -220,8 +220,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 11.png"
+              class="img-card8"
+              src="assets/images/card8.png"
               alt="Card Image"
             />
             <div class="card-content">
@@ -246,8 +246,8 @@
               style="color: #9d9db5"
             ></i>
             <img
-              class="img-card"
-              src="assets/images/Background 12.png"
+              class="img-card9"
+              src="assets/images/card9.png"
               alt="Card Image"
             />
             <div class="card-content">
