--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
               <li>Soft Skills</li>
             </ul>
           </div>
+          <div class="footer-courses">
+            <p>OUR COURSES</p>
+            <ul>
+              <li>Data Analystics</li>
+              <li>Web Development</li>
+            </ul>
+          </div>
+        </div>
+        <div class="follow-us">
           <div class="socmed-links">
             <p>Follow Us</p>
             <ul>
@@ -288,15 +297,6 @@
               <li><i class="fa-brands fa-whatsapp socmed"></i></li>
               <li><i class="fa-brands fa-tiktok socmed"></i></li>
               <li><i class="fa-solid fa-play socmed"></i></li>
-            </ul>
-          </div>
-        </div>
-        <div class="section-courses" style="color: aliceblue">
-          <div class="footer-courses">
-            <p>OUR Courses</p>
-            <ul>
-              <li>Data Analystics</li>
-              <li>Web Development</li>
             </ul>
           </div>
           <div class="footer-privacy">
