--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
       <main>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card1"
               src="assets/images/card1.png"
@@ -64,10 +61,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card2"
               src="assets/images/card2.png"
@@ -88,10 +82,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card3"
               src="assets/images/card3.png"
@@ -114,10 +105,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card4"
               src="assets/images/card4.png"
@@ -141,10 +129,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card5"
               src="assets/images/card5.png"
@@ -165,10 +150,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card6"
               src="assets/images/card6.png"
@@ -191,10 +173,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card7"
               src="assets/images/card7.png"
@@ -215,10 +194,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card8"
               src="assets/images/card8.png"
@@ -241,10 +217,7 @@
         </section>
         <section class="card-container">
           <div class="card">
-            <i
-              class="fa-regular fa-circle-xmark circle-x"
-              style="color: #9d9db5"
-            ></i>
+            <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card9"
               src="assets/images/card9.png"
