--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="assets/images/news-icon-13636-Windows.ico"
       type="image/x-icon"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <script
       src="https://kit.fontawesome.com/9983c167b7.js"
       crossorigin="anonymous"
@@ -38,8 +44,8 @@
         </ul>
       </nav>
       <main>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card1"
@@ -48,7 +54,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>Front-End vs Back-End Developer: What's the Difference?</h3>
+              <p>Front-End vs Back-End Developer: What's the Difference?</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -59,8 +65,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card2"
@@ -69,7 +75,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>What is a Full Stack Developer?</h3>
+              <p>What is a Full Stack Developer?</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -80,8 +86,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card3"
@@ -90,9 +96,9 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>
+              <p>
                 What are the Soft Skills and How Do They Benefit Your Career?
-              </h3>
+              </p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -103,8 +109,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card4"
@@ -113,10 +119,10 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>
+              <p>
                 IT Jobs: In-Demand, Available to Everyone, Ripe With
                 Opportunity.
-              </h3>
+              </p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -127,8 +133,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card5"
@@ -137,7 +143,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>7 Learning Tips for Data Science Self-Study.</h3>
+              <p>7 Learning Tips for Data Science Self-Study.</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -148,8 +154,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card6"
@@ -158,9 +164,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>
-                Hard Skills vs. Soft Skills: Do You Really Need Both? Why?
-              </h3>
+              <p>Hard Skills vs. Soft Skills: Do You Really Need Both? Why?</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -171,8 +175,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card7"
@@ -181,7 +185,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>What is JavaScript?</h3>
+              <p>What is JavaScript?</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -192,8 +196,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card8"
@@ -202,9 +206,9 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>
+              <p>
                 Who is Business Analyst: Roles, Skills, Salaries, Job Prospects?
-              </h3>
+              </p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -215,8 +219,8 @@
             </div>
           </div>
         </section>
-        <section class="card-container">
-          <div class="card">
+        <section class="myCard-cont">
+          <div class="myCard">
             <i class="fa-regular fa-circle-xmark circle-x"></i>
             <img
               class="img-card9"
@@ -225,7 +229,7 @@
             />
             <div class="card-content">
               <i class="fa-regular fa-circle-check circle-check"></i>
-              <h3>How Much Do Data Analysts Make? 2023 Salary Guide</h3>
+              <p>How Much Do Data Analysts Make? 2023 Salary Guide</p>
               <hr />
               <div>
                 <ul class="card-footer">
@@ -282,6 +286,11 @@
         </div>
       </footer>
     </header>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/index.js"></script>
   </body>
 </html>
