--- a/index.html
+++ b/index.html
@@ -43,249 +43,246 @@
           <li><a class="log-in" href="#">Log in</a></li>
         </ul>
       </nav>
-      <main>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card1"
-              src="assets/images/card1.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>Front-End vs Back-End Developer: What's the Difference?</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">January 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 4.5k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card2"
-              src="assets/images/card2.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>What is a Full Stack Developer?</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">February 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 10.1k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card3"
-              src="assets/images/card3.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>
-                What are the Soft Skills and How Do They Benefit Your Career?
-              </p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">March 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 15.3k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card4"
-              src="assets/images/card4.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>
-                IT Jobs: In-Demand, Available to Everyone, Ripe With
-                Opportunity.
-              </p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">April 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 13k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card5"
-              src="assets/images/card5.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>7 Learning Tips for Data Science Self-Study.</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">May 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 20.9k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card6"
-              src="assets/images/card6.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>Hard Skills vs. Soft Skills: Do You Really Need Both? Why?</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">June 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 5k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card7"
-              src="assets/images/card7.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>What is JavaScript?</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">July 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 99k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card8"
-              src="assets/images/card8.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>
-                Who is Business Analyst: Roles, Skills, Salaries, Job Prospects?
-              </p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">August 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 7.8k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="myCard-cont">
-          <div class="myCard">
-            <i class="fa-regular fa-circle-xmark circle-x"></i>
-            <img
-              class="img-card9"
-              src="assets/images/card9.png"
-              alt="Card Image"
-            />
-            <div class="card-content">
-              <i class="fa-regular fa-circle-check circle-check"></i>
-              <p>How Much Do Data Analysts Make? 2023 Salary Guide</p>
-              <hr />
-              <div>
-                <ul class="card-footer">
-                  <li class="date">September 1, 2023</li>
-                  <li><i class="fa-regular fa-heart heart"></i> 4.6k</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
-      <footer>
-        <div class="section-blog">
-          <div class="footer-blog">
-            <p>BLOG</p>
-            <ul>
-              <li>Data Analyst</li>
-              <li>Web Developer</li>
-              <li>Career</li>
-              <li>Sucess Stories</li>
-              <li>Resume</li>
-              <li>Hard Skils</li>
-              <li>Soft Skills</li>
-            </ul>
-          </div>
-          <div class="footer-courses">
-            <p>OUR COURSES</p>
-            <ul>
-              <li>Data Analystics</li>
-              <li>Web Development</li>
-            </ul>
-          </div>
-        </div>
-        <div class="follow-us">
-          <div class="socmed-links">
-            <p>Follow Us</p>
-            <ul>
-              <li><i class="fa-brands fa-linkedin-in socmed"></i></li>
-              <li><i class="fa-brands fa-instagram socmed"></i></li>
-              <li><i class="fa-brands fa-facebook socmed"></i></li>
-              <li><i class="fa-brands fa-twitter socmed"></i></li>
-              <li><i class="fa-brands fa-whatsapp socmed"></i></li>
-              <li><i class="fa-brands fa-tiktok socmed"></i></li>
-              <li><i class="fa-solid fa-play socmed"></i></li>
-            </ul>
-          </div>
-          <div class="footer-privacy">
-            <ul>
-              <li>Privacy Policy</li>
-              <li>.</li>
-              <li>Terms of Use</li>
-            </ul>
-          </div>
-        </div>
-      </footer>
     </header>
+    <main>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card1"
+            src="assets/images/card1.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>Front-End vs Back-End Developer: What's the Difference?</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">January 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 4.5k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card2"
+            src="assets/images/card2.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>What is a Full Stack Developer?</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">February 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 10.1k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card3"
+            src="assets/images/card3.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>What are the Soft Skills and How Do They Benefit Your Career?</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">March 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 15.3k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card4"
+            src="assets/images/card4.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>
+              IT Jobs: In-Demand, Available to Everyone, Ripe With Opportunity.
+            </p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">April 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 13k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card5"
+            src="assets/images/card5.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>7 Learning Tips for Data Science Self-Study.</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">May 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 20.9k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card6"
+            src="assets/images/card6.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>Hard Skills vs. Soft Skills: Do You Really Need Both? Why?</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">June 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 5k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card7"
+            src="assets/images/card7.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>What is JavaScript?</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">July 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 99k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card8"
+            src="assets/images/card8.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>
+              Who is Business Analyst: Roles, Skills, Salaries, Job Prospects?
+            </p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">August 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 7.8k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="myCard-cont">
+        <div class="myCard">
+          <i class="fa-regular fa-circle-xmark circle-x"></i>
+          <img
+            class="img-card9"
+            src="assets/images/card9.png"
+            alt="Card Image"
+          />
+          <div class="card-content">
+            <i class="fa-regular fa-circle-check circle-check"></i>
+            <p>How Much Do Data Analysts Make? 2023 Salary Guide</p>
+            <hr />
+            <div>
+              <ul class="card-footer">
+                <li class="date">September 1, 2023</li>
+                <li><i class="fa-regular fa-heart heart"></i> 4.6k</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="section-blog">
+        <div class="footer-blog">
+          <p>BLOG</p>
+          <ul>
+            <li>Data Analyst</li>
+            <li>Web Developer</li>
+            <li>Career</li>
+            <li>Sucess Stories</li>
+            <li>Resume</li>
+            <li>Hard Skils</li>
+            <li>Soft Skills</li>
+          </ul>
+        </div>
+        <div class="footer-courses">
+          <p>OUR COURSES</p>
+          <ul>
+            <li>Data Analystics</li>
+            <li>Web Development</li>
+          </ul>
+        </div>
+      </div>
+      <div class="follow-us">
+        <div class="socmed-links">
+          <p>Follow Us</p>
+          <ul>
+            <li><i class="fa-brands fa-linkedin-in socmed"></i></li>
+            <li><i class="fa-brands fa-instagram socmed"></i></li>
+            <li><i class="fa-brands fa-facebook socmed"></i></li>
+            <li><i class="fa-brands fa-twitter socmed"></i></li>
+            <li><i class="fa-brands fa-whatsapp socmed"></i></li>
+            <li><i class="fa-brands fa-tiktok socmed"></i></li>
+            <li><i class="fa-solid fa-play socmed"></i></li>
+          </ul>
+        </div>
+        <div class="footer-privacy">
+          <ul>
+            <li>Privacy Policy</li>
+            <li>.</li>
+            <li>Terms of Use</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
