--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>News Website</title>
   </head>
   <body>
-    <!-- <header>
+    <header>
       <nav>
         <label class="logo"><p>LOGO</p></label>
         <ul class="menu">
@@ -43,39 +43,7 @@
           <li><a class="log-in" href="#">Log in</a></li>
         </ul>
       </nav>
-    </header> -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    </header>
     <main>
       <section class="myCard-cont">
         <div class="myCard">
