--- a/index.html
+++ b/index.html
@@ -30,18 +30,39 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar navbar-expand-lg">
         <label class="logo"><p>LOGO</p></label>
-        <ul class="menu">
-          <li><a class="blog" href="#">Blog</a></li>
-          <li><a class="courses" href="#">Our Courses</a></li>
-          <li><a class="webinars" href="#">Free Webinars</a></li>
-          <li><a class="reviews" href="#">Reviews</a></li>
-        </ul>
-        <ul class="sign-log">
-          <li><a class="sign-up" href="#">Sign Up</a></li>
-          <li><a class="log-in" href="#">Log in</a></li>
-        </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="menu navbar-nav">
+            <li class="nav-item">
+              <a class="blog" aria-current="page" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="courses" href="#">Our Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="webinars" href="#">Free Webinars</a>
+            </li>
+            <li class="nav-item">
+              <a class="reviews" href="#">Reviews</a>
+            </li>
+          </ul>
+          <ul class="sign-log navbar-nav">
+            <li class="nav-item"><a class="sign-up" href="#">Sign Up</a></li>
+            <li class="nav-item"><a class="log-in" href="#">Log in</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
