adding like function

--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">January 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 4.5k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i
+                  >4.5k
+                </li>
               </ul>
             </div>
           </div>
