add like function

--- a/index.html
+++ b/index.html
@@ -108,7 +108,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">February 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 10.1k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  10.1k
+                </li>
               </ul>
             </div>
           </div>
@@ -129,7 +135,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">March 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 15.3k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  15.3k
+                </li>
               </ul>
             </div>
           </div>
@@ -152,7 +164,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">April 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 13k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  13k
+                </li>
               </ul>
             </div>
           </div>
@@ -173,7 +191,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">May 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 20.9k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  20.9k
+                </li>
               </ul>
             </div>
           </div>
@@ -194,7 +218,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">June 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 5k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  5k
+                </li>
               </ul>
             </div>
           </div>
@@ -215,7 +245,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">July 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 99k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  99k
+                </li>
               </ul>
             </div>
           </div>
@@ -238,7 +274,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">August 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 7.8k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  7.8k
+                </li>
               </ul>
             </div>
           </div>
@@ -259,7 +301,13 @@
             <div>
               <ul class="card-footer">
                 <li class="date">September 1, 2023</li>
-                <li><i class="fa-regular fa-heart heart"></i> 4.6k</li>
+                <li>
+                  <i
+                    class="fa-regular fa-heart heart"
+                    onclick="favorite(this)"
+                  ></i>
+                  4.6k
+                </li>
               </ul>
             </div>
           </div>
